// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.interrupts;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

import "io/harness/pms/contracts/advisers/advise.proto";

message InterruptConfig {
  IssuedBy issuedBy = 1;
  oneof config {
    RetryInterruptConfig retryInterruptConfig = 3;
  }
}

message RetryInterruptConfig {
  string retryId = 1;
}

message IssuedBy {
  google.protobuf.Timestamp issueTime = 2;
  oneof issuer {
    ManualIssuer manualIssuer = 3;
    AdviserIssuer adviserIssuer = 4;
    TimeoutIssuer timeoutIssuer = 5;
    TriggerIssuer triggerIssuer = 6;
  }
}

message ManualIssuer {
  // TODO(archit): Add user details
  string email_id = 1;
  string user_id = 2;

  string type = 3;
  string identifier = 4;
}
message AdviserIssuer {
  io.harness.pms.contracts.advisers.AdviseType adviserType = 1;
}

message TimeoutIssuer {
  string timeoutInstanceId = 1;
}

message TriggerIssuer {
  string triggerRef = 1;
  bool abortPrevConcurrentExecution = 2;
}
